--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "csv-parse": "^3.0.0",
     "extract-zip": "^1.6.7",
     "fs-extra": "^7.0.1",
+    "https-proxy-agent": "^2.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "node-fetch": "^2.3.0",
